eRegister EMPI updates and notifications Lesotho

--- a/ui/app/clinical/index.html
+++ b/ui/app/clinical/index.html
@@ -376,6 +376,7 @@
         <script src="consultation/mappers/specimenMapper.js"></script>
         <script src="consultation/services/otherInvestigationsConceptsMapper.js"></script>
         <script src="consultation/services/patientVisitHistoryService.js"></script>
+        <script src="consultation/services/sharedHealthRecordService.js"></script>
         <script src="consultation/services/labTestsProvider.js"></script>
         <script src="consultation/services/otherTestsProvider.js"></script>
         <script src="consultation/services/Notifier.js"></script>
@@ -398,6 +399,7 @@
         <script src="consultation/controllers/dispositionController.js"></script>
         <script src="consultation/controllers/consultationController.js"></script>
         <script src="consultation/controllers/conceptSetPageController.js"></script>
+        <script src="consultation/controllers/sharedRecordPageController.js"></script>  
         <script src="consultation/controllers/drugOrderHistoryController.js"></script>
         <script src="consultation/controllers/customDrugOrderHistoryController.js"></script>
         <script src="consultation/controllers/latestPrescriptionPrintController.js"></script>
@@ -512,7 +514,7 @@
         <script src="../common/logging/services/auditLogService.js"></script>
         <script src="common/services/treatmentService.js"></script>
         <script src="common/models/auditLogEventDetails.js"></script>
-
+        <script src="consultation/services/defaultSharedHealthRecordServiceStrategy.js"></script>
         <!-- endbuild -->
 
         <script src="/bahmni_config/openmrs/apps/customDisplayControl/js/customControl.js"></script>
