ported period and daysdispensed

--- a/ui/app/registration/index.html
+++ b/ui/app/registration/index.html
@@ -50,6 +50,8 @@
 
         <script src="../components/bahmni-form-controls/helpers.js"></script>
         <script src="../components/bahmni-form-controls/bundle.js"></script>
+        	
+        <script src="../components/natural-orderby/natural-orderby.min.js"></script>
 
         <!-- build:js registration.min.js -->
         <script src="../common/constants.js"></script>
