--- a/ui/app/home/index.html
+++ b/ui/app/home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Bahmni Home Testing AnotherBranch Take2</title>
+    <title>Bahmni Home Testing AnotherBranch</title>
 
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="true">
