bahmni apps release 13072021

--- a/clinical/index.html
+++ b/clinical/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="../components/ng-tags-input/ng-tags-input.bootstrap.min.aede31ae.css"/>
         <link rel="stylesheet" href="../components/ng-tags-input/ng-tags-input.min.0387e1ac.css"/>
 
-        <link rel="stylesheet" href="clinical.min.css"/>
+        <link rel="stylesheet" href="./clinical.min.99d91c7b.css"/>
 
     </head>
     <body ng-app="consultation">
