--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-default.min.bca46d27.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-plain.min.70ac5675.css"/>
 
-        <link rel="stylesheet" href="home.min.css"/>
+        <link rel="stylesheet" href="./home.min.95f65fa7.css"/>
     </head>
     <body>
         <div class="reg-wrapper">
