--- a/reports/index.html
+++ b/reports/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog.min.9df3a622.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-default.min.bca46d27.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-plain.min.70ac5675.css"/>
-        <link rel="stylesheet" href="reports.min.css"/>
+        <link rel="stylesheet" href="./reports.min.99d91c7b.css"/>
     </head>
     <body>
         <div ng-app="bahmni.reports" class="bahmni-reports">
