--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-default.min.bca46d27.css"/>
     <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-plain.min.70ac5675.css"/>
 
-    <link rel="stylesheet" href="./home.min.e91d5c49.css"/>
+    <link rel="stylesheet" href="./home.min.60ac5604.css"/>
 </head>
 
 <body>
@@ -23,6 +23,9 @@
             <div ng-include src="'../common/ui-helper/messages.html'"></div>
             <div ui-view id="view-content"></div>
         </div>
+    </div>
+    <div>
+        <p id="eregisterversion">Version: DD-MM-YYYY</p>
     </div>
     <script src="../components/crypto-js/crypto-js.df971499.js"></script>
     <script src="../components/lodash/dist/lodash.min.cd62e1be.js"></script>
@@ -44,7 +47,7 @@
     <script src="../components/moment/min/moment-with-locales.min.777d149d.js"></script>
     <script src="../components/ngDialog/js/ngDialog.min.4ff11f0c.js"></script>
 
-    <script src="./home.min.b2ee5448.js"></script>
+    <script src="./home.min.016690fa.js"></script>
 
     <script src="./home.min.web.98847a14.js"></script>
 </body>
