Auto fill data from LOR to ANC register

--- a/admin/index.html
+++ b/admin/index.html
@@ -7,9 +7,9 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,minimal-ui"/>
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
         <link rel="stylesheet" href="../lib/jquery/jquery-ui-1.10.4.custom.min.c3b213e8.css">
-        <link rel="stylesheet" href="../styles/clinical.111ad646.css"/>
+        <link rel="stylesheet" href="../styles/clinical.css"/>
 
-        <link rel="stylesheet" href="./admin.min.c04f4df5.css"/>
+        <link rel="stylesheet" href="admin.min.css"/>
     </head>
     <body ng-app="admin" class="admin-app">
         <div ng-include src="'../common/ui-helper/header.html'"></div>
