--- a/registration/index.html
+++ b/registration/index.html
@@ -7,7 +7,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="../favicon.ico">
         <link rel="stylesheet" href="../lib/jquery/jquery-ui-1.10.4.custom.min.c3b213e8.css">
         <link rel="stylesheet" href="../components/select2/select2.d62b26ab.css"/>
-        <link rel="stylesheet" href="./registration.min.103f9453.css"/>
+        <link rel="stylesheet" href="registration.min.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog.min.9df3a622.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-default.min.bca46d27.css"/>
         <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-plain.min.70ac5675.css"/>
@@ -51,7 +51,7 @@
         	
         <script src="../components/natural-orderby/natural-orderby.min.js"></script>
 
-        <script src="./registration.min.91592d7c.js"></script>
+        <script src="./registration.min.1d3ac0c5.js"></script>
 
         <script src="./registration.min.web.5ff5b43c.js"></script>
 
