Autofill LOR to ANC register

--- a/clinical/index.html
+++ b/clinical/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="../components/ng-tags-input/ng-tags-input.bootstrap.min.aede31ae.css"/>
         <link rel="stylesheet" href="../components/ng-tags-input/ng-tags-input.min.0387e1ac.css"/>
 
-        <link rel="stylesheet" href="clinical.min.css"/>
+        <link rel="stylesheet" href="./clinical.min.5f13b2b5.css"/>
 
     </head>
     <body ng-app="consultation">
@@ -69,7 +69,7 @@
         <script src="../components/bahmni-form-controls/helpers.2d570faf.js"></script>
         <script src="../components/bahmni-form-controls/bundle.2eb490c9.js"></script>
 
-        <script src="./clinical.min.de2763c4.js"></script>
+        <script src="./clinical.min.46f39514.js"></script>
 
         <script src="./clinical.min.web.6734bdd2.js"></script>
 
