--- a/home/index.html
+++ b/home/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-default.min.bca46d27.css"/>
     <link rel="stylesheet" href="../components/ngDialog/css/ngDialog-theme-plain.min.70ac5675.css"/>
 
-    <link rel="stylesheet" href="home.min.css"/>
+    <link rel="stylesheet" href="./home.min.c04f4df5.css"/>
 </head>
 
 <body>
