--- a/clinical/index.html
+++ b/clinical/index.html
@@ -69,12 +69,14 @@
         <script src="../components/bahmni-form-controls/helpers.2d570faf.js"></script>
         <script src="../components/bahmni-form-controls/bundle.2eb490c9.js"></script>
 
-        <script src="./clinical.min.262fb86b.js"></script>
+        <script src="./clinical.min.d10f9e46.js"></script>
 
-        <script src="./clinical.min.web.6734bdd2.js"></script>
+        <script src="./clinical.min.web.c4f174ef.js"></script>
 
         <script src="/bahmni_config/openmrs/apps/customDisplayControl/js/customControl.js"></script>
         <script src="/bahmni_config/openmrs/apps/clinical/formConditions.js"></script>
         <script src="/implementation_config/openmrs/apps/clinical/formConditions.js"></script>
+        
+        <script src="common/services/cagConsultationService.js"></script>
     </body>
 </html>
