--- a/clinical/index.html
+++ b/clinical/index.html
@@ -24,7 +24,7 @@
         <div ng-controller="ClinicalController" ng-class="{'retro-mode':retrospectiveClass()}" id="ClinicalController">
             <div ng-include src="'../common/ui-helper/messages.html'"></div>
             <div class="opd-wrapper">
-                <div ui-view="content" id="view-content" class="opd-content-wrapper"></div>
+                <div ui-view="content" id="view-content" class="opd-content-wrapper test"></div>
             </div>
         </div>
         <link rel="stylesheet" href="../components/offline/themes/{{getLocaleCSS()}}.css">
@@ -69,7 +69,7 @@
         <script src="../components/bahmni-form-controls/helpers.2d570faf.js"></script>
         <script src="../components/bahmni-form-controls/bundle.2eb490c9.js"></script>
 
-        <script src="./clinical.min.678797c5.js"></script>
+        <script src="./clinical.min.5002d2ca.js"></script>
 
         <script src="./clinical.min.web.c4f174ef.js"></script>
 
